# Amiibot

./: .bandit  .gitignore  .pre-commit-config.yaml  404.html  Pipfile  README.md  alembic.ini  amiibot.py  amiibot_runner.sh  constants.py  database.py  index.html  mkdocs.yml  models.py  pyproject.toml  pytest.ini  result.py  scraper.py  sitemap.xml  utils.py
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: a4ab2ba19a39_initial_schema.py
config/: config.example.json  config.json.example  config.py
configuration/: index.html
deployment/: index.html
docs/: configuration.md  deployment.md  gettingstarted.md  index.md  testing.md  troubleshooting.md
docs/material/overrides/: home.html
gettingstarted/: index.html
messenger/: discord.py  manager.py  messenger.py  telegram.py
search/: search_index.json
stockist/: bestbuy.py  bestbuyca.py  cexuk.py  game.py  gamestop.py  manager.py  mecchajapan.py  nintendouk.py  playasia.py  shopto.py  stockist.py  thesource.py  useragents.py  utils.py
testing/: index.html
tests/: __init__.py  test_amiibot_unit.py  test_config.py  test_database.py  test_messenger.py  test_scraper.py  test_stockist.py  test_utils.py
troubleshooting/: index.html
