[project]
name = "amiibot"
version = "1.0.1"
description = "Amiibo stock checker"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromedriver-autoinstaller>=0.6.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "black>=26.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.1",
    "types-requests>=2.32.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
