[project]
name = "amiibot"
version = "1.0.1"
description = "Amiibo stock checker"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromedriver-autoinstaller>=0.6.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "requests>=2.33.0",
    "selenium>=4.40.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.21",
    "types-requests>=2.32.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
