[project]
name = "amiibot"
version = "1.0.1"
description = "Amiibo stock checker"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromedriver-autoinstaller>=0.6.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "requests>=2.33.0",
    "selenium>=4.46.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "alembic>=1.17.0",
    "black>=26.3.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.0",
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.21",
    "types-requests>=2.32.0",
]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["amiibot.py", "scraper.py", "database.py", "utils.py", "constants.py", "result.py"]
exclude = ["tests", "site", "docs", "htmlcov", "__pycache__", ".mypy_cache", ".ruff_cache"]
reportMissingTypeStubs = false
reportMissingImports = true
reportUnusedImport = true
reportUnusedVariable = true
reportOptionalMemberAccess = true
reportArgumentType = true
reportAttributeAccessIssue = true
reportCallIssue = true
reportGeneralTypeIssues = true
reportOptionalIterable = true
reportOptionalSubscript = true
reportPrivateUsage = true
